--- a/react/style.css
+++ b/react/style.css
@@ -102,6 +102,7 @@ body {
 }
 .filter {
   padding-bottom: 10px;
+  width: 100%;
 }
 .adressInput {
   padding-bottom: 10px;
@@ -124,8 +125,9 @@ body {
   border: 1px solid #A2A2A2;
   background-color: #ffffff;
   height: 35px;
-  width: 250px;
-
+  /* width: 250px; */
+  width: 90%;
+  padding-left: 5%;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
@@ -233,8 +235,8 @@ body {
 
 .listContainer {
   background-color: #ffffff;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .list {
